chore: fix overflow

--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -14,5 +14,4 @@ html, body {
   padding-right: 1rem;
   width: 100%;
   height: 100dvh;
-  overflow-y: auto;
 }
